--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="filter-attach">
           <span class="filter-attach-title">Filter:</span>
-          <btn type="button" class="filter-attach__button filter_all" value="all">
+          <button type="button" class="filter-attach__button filter_all" value="all">
             <svg width="800px" height="800px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
               <g fill="#373737" stroke-width=".82858px" color="#000000">
                 <path
@@ -47,8 +47,8 @@
                 />
               </g>
             </svg>
-          </btn>
-          <btn type="button" class="filter-attach__button filter_img" value="img">
+          </button>
+          <btn type="img" class="filter-attach__button filter_img" value="img">
             <svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 fill-rule="evenodd"
@@ -64,7 +64,7 @@
               <circle cx="15" cy="9" r="2" fill="#222222" />
             </svg>
           </btn>
-          <btn type="button" class="filter-attach__button filter_video">
+          <button type="button" class="filter-attach__button filter_video" value="vid">
             <svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M18 3H6C3.79086 3 2 4.79086 2 7V17C2 19.2091 3.79086 21 6 21H18C20.2091 21 22 19.2091 22 17V7C22 4.79086 20.2091 3 18 3Z"
@@ -81,8 +81,8 @@
                 stroke-linejoin="round"
               />
             </svg>
-          </btn>
-          <btn type="button" class="filter-attach__button filter_audio">
+          </button>
+          <button type="button" class="filter-attach__button filter_audio" value="aud">
             <svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M9 19C9 20.1046 7.65685 21 6 21C4.34315 21 3 20.1046 3 19C3 17.8954 4.34315 17 6 17C7.65685 17 9 17.8954 9 19ZM9 19V5L21 3V17M21 17C21 18.1046 19.6569 19 18 19C16.3431 19 15 18.1046 15 17C15 15.8954 16.3431 15 18 15C19.6569 15 21 15.8954 21 17ZM9 9L21 7"
@@ -92,19 +92,30 @@
                 stroke-linejoin="round"
               />
             </svg>
-          </btn>
+          </button>
         </div>
       </div>
       <div class="container"></div>
       <div class="video-container">
         <video class="video" controls></video>
         <div class="video-controls">
-          <div class="video-save">V</div>
+          <div class="video-save">Save</div>
           <span class="video-timer"></span>
-          <div class="video-cancel">X</div>
+          <div class="video-cancel">Exit</div>
         </div>
         <form class="video-form">
           <input type="file" class="video-file-input" name="file" />
+        </form>
+      </div>
+      <div class="audio-container">
+        <audio class="audio" controls></audio>
+        <div class="audio-controls">
+          <div class="audio-save">Save</div>
+          <span class="audio-timer"></span>
+          <div class="audio-cancel">Exit</div>
+        </div>
+        <form class="audio-form">
+          <input type="file" class="audio-file-input" name="file" />
         </form>
       </div>
     </div>
